src/snapshots/req__tests__curl_option_tests__post_with_json_body.snap
---
source: src/main.rs
expression: output_str
---
curl -X POST 'https://example.com/api/users' \
	-H 'content-type:application/json' \
	-d @- << REQUEST_BODY
{"email":"john@example.com","name":"John Doe"}
REQUEST_BODY
