src/snapshots/req__tests__curl_option_tests__post_with_multiline_body.snap
---
source: src/main.rs
expression: output_str
---
curl -X POST 'https://example.com/api/data' \
	-H 'content-type: application/json' \
	-d @- << REQUEST_BODY
{"description":"Line 1\nLine 2\nLine 3","title":"Test"}
REQUEST_BODY
