src/snapshots/req__tests__curl_option_tests__with_bearer_auth.snap
---
source: src/main.rs
expression: output_str
---
curl -X GET 'https://example.com/api/protected' \
	-H 'authorization:Bearer my-secret-token-123'
