src/snapshots/req__tests__curl_option_tests__with_custom_headers.snap
---
source: src/main.rs
expression: output_str
---
curl -X GET 'https://example.com/api/users' \
	-H 'authorization: Bearer token123' \
	-H 'x-custom-header: custom-value'
