src/snapshots/req__tests__curl_option_tests__with_detailed_proxy.snap
---
source: src/main.rs
expression: output_str
---
curl -X GET 'https://example.com/api/data' \
	-x 'http://https-proxy.example.com:8443'
