src/snapshots/req__tests__curl_option_tests__with_detailed_proxy_http_url.snap
---
source: src/main.rs
expression: output_str
---
curl -X GET 'http://example.com/api/data' \
	-x 'http://http-proxy.example.com:8080'
