src/snapshots/req__tests__curl_option_tests__with_insecure_option.snap
---
source: src/main.rs
expression: output_str
---
curl -k -X GET 'https://self-signed.example.com/api'
