src/snapshots/req__tests__curl_option_tests__with_proxy_special_chars.snap
---
source: src/main.rs
expression: output_str
---
curl -X GET 'https://example.com/api/data' \
	-x 'http://proxy.example.com:8080' \
	--proxy-user 'user\'s\\name:pass\'word'
