src/snapshots/req__tests__curl_option_tests__with_special_chars_in_url.snap
---
source: src/main.rs
expression: output_str
---
curl -X GET 'https://example.com/api/search?q=test&lang=en'
